# faqifai

./: Cargo.toml  README.md  faqifai.faq  faqifai.md  justfile
.github/skills/faqifai/: SKILL.md
.github/workflows/: rust.yml
src/: ai.rs  codebase.rs  config.rs  discovery.rs  eval.rs  main.rs  orchestrator.rs  output.rs  state.rs
src/copilot/: client.rs  jsonrpc.rs  mod.rs  session.rs  types.rs
