[package]
name = "faqifai"
version = "0.1.0"
edition = "2024"
description = "AI-powered FAQ generator for codebases using GitHub Copilot"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "io-util"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha2 = "0.10"
ignore = "0.4"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
rayon = "1"
starlark = "0.13"
